# ClubVillaElisaWebsite

./: .gitignore  README.md  package-lock.json
admin/: .gitignore  app.py  proyecto_2022_key  proyecto_2022_key.pub  pyproject.toml
admin/migrations/versions/: 208fd553879e_add_disciplines_associates_and_complete_.py  69f1d3f069a0_added_payment_permission_and_role.py  c18465c8ee7d_initial_migration.py  c9df50cb3f85_email_added_to_user.py
admin/public/: error.css
admin/public/css/: Ludens-Users---25-After-Register.css  error.css  flashes.css  messages.css  miscellaneous.css  styles.min.css  tables.css
admin/public/csv/: Associate_list_report.csv
admin/src/: config.py
admin/src/core/: db.py  resource_manager.py  seeds.py
admin/src/core/auth/: __init__.py  permission.py  role.py  user.py
admin/src/core/auth/repositories/: permission.py  role.py  user.py
admin/src/core/board/: __init__.py  associate.py  base_model.py  configuration.py  discipline.py  payment.py  user.py
admin/src/core/board/repositories/: associate.py  configuration.py  discipline.py  payments.py
admin/src/web/: __init__.py  config.py
admin/src/web/controllers/: associate.py  auth.py  configuration.py  discipline.py  payments.py  user.py
admin/src/web/forms/: associate.py  base_form.py  config.py  discipline.py  login.py  payments.py  user.py
admin/src/web/helpers/: associate.py  auth.py  build_response.py  csv_writer.py  form_utils.py  handlers.py  pagination.py  payment_helpers.py  response_codes.py  utils.py  writers.py
admin/src/web/static/: base.css
admin/src/web/templates/: associates_list.html  base.html  base_form.html  base_list.html  configuracion.html  configuration.html  error.html  errors.html  flashes.html  footer.html  form_errors.html  home.html  index.html  layout.html  listado_socios.html  login.html  navbar.html  paginator.html  public_index.html  search.html  signup.html
admin/tests/: test_disciplines.py
(+74 files in other folders)
